@@ -2,6 +2,7 @@
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Catalyst" => "5";
+requires "Feature::Compat::Try" => "0";
 requires "File::Spec" => "0";
 requires "File::stat" => "0";
 requires "IO::File" => "0";
